<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_purple"
    tools:context="com.example.ik_2dm3.tudanka.TudankaP2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/p2titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:transitionName="@string/p2titulo"
            android:text="@string/p2titulo"
            android:textAlignment="center"
            android:textSize="45px"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="152dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/iglesia" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/abuelo" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"

                android:layout_height="107dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/flechaa"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="visible">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bordep2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/p2texto1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold"
                    android:text="@string/p2texto1"
                    android:textSize="18dp"
                    android:transitionName="@string/p2texto1" />

                <TextView
                    android:id="@+id/p2texto2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold"
                    android:text="@string/p2texto2"
                    android:textSize="18dp"
                    android:transitionName="@string/p2texto2" />

                <TextView
                    android:id="@+id/p2texto3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold"
                    android:text="@string/p2texto3"
                    android:textSize="18dp"
                    android:transitionName="@string/p2texto3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/p2texto4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/p2texto4"
                        android:transitionName="@string/p2texto4" />

                    <TextView
                        android:id="@+id/p2texto5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/p2texto5"
                        android:transitionName="@string/p2texto5"
                         />

                    <TextView
                        android:id="@+id/p2texto6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/p2texto6"
                        android:transitionName="@string/p2texto6"
                         />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/nabea" />

                    <ImageView
                        android:id="@+id/imageView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/korua" />

                    <ImageView
                        android:id="@+id/imageView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/arkupea" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
