<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondop5aa"
    tools:context="com.example.ik_2dm3.tudanka.TudankaP5Aa"
    android:orientation="vertical">

    <TextView
        android:id="@+id/p4titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:transitionName="@string/p4titulo"
        android:text="@string/p4titulo"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="45px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="161dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/abuelo" />

        <ImageView
            android:id="@+id/crucigrama"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/cr" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:background="@drawable/fondo5aa"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/p5aatexto1"
                android:layout_width="573dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:transitionName="@string/p5aatexto1"
                android:text="@string/p5aatexto1"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/r1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="erantzuna"
                android:textSize="14dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/p5aatexto2"
                android:layout_width="573dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:transitionName="@string/p5aatexto2"
                android:text="@string/p5aatexto2"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/r2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="erantzuna"
                android:textSize="14dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/p5aatexto3"
                android:layout_width="573dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:transitionName="@string/p5aatexto3"
                android:text="@string/p5aatexto3"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/r3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="erantzuna"
                android:textSize="14dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/p5aatexto4"
                android:layout_width="573dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:transitionName="@string/p5aatexto4"
                android:text="@string/p5aatexto4"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/r4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="erantzuna"
                android:textSize="14dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/p5aatexto5"
                android:layout_width="573dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:transitionName="@string/p5aatexto5"
                android:text="@string/p5aatexto5"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/r5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="erantzuna"
                android:textSize="14dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/p5aatexto6"
                android:layout_width="573dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:transitionName="@string/p5aatexto6"
                android:text="@string/p5aatexto6"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/r6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="erantzuna"
                android:textSize="14dp" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Mostrar nombre"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/flechaa"
            android:visibility="visible"></Button>

    </LinearLayout>



</LinearLayout>


