<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ik_2dm3.tudanka.TudankaP3">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondop3"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/p3titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/p3titulo"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="45px"
            android:textStyle="bold"
            android:transitionName="@string/p3titulo" />

        <LinearLayout
            android:layout_width="351dp"
            android:layout_height="169dp"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/udaletxea" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/abuela" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bordep3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/p3texto1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/p3texto1"
                android:textSize="18dp"
                android:transitionName="@string/p3texto1" />

            <TextView
                android:id="@+id/p3texto2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/p3texto2"
                android:textSize="18dp"
                android:transitionName="@string/p3texto2" />

            <TextView
                android:id="@+id/p3texto3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p3texto3"
                android:textSize="18dp"
                android:transitionName="@string/p3texto3" />


        </LinearLayout>


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="125dp"
            android:layout_marginRight="125dp"
            android:background="@drawable/flechaa"
            android:visibility="visible"></Button>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
