<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context="com.example.ik_2dm3.tudanka.PresentacionES"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:background="@android:color/white"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:visibility="visible">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/holo_orange_light"
            android:orientation="vertical">

            <TextView
                android:id="@+id/presentacion1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/presentacion1"
                android:textSize="18dp"
                android:transitionName="@string/presentacion1" />

            <TextView
                android:id="@+id/presentacion2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/presentacion2"
                android:textSize="18dp"
                android:transitionName="@string/presentacion2" />

            <TextView
                android:id="@+id/presentacion3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/presentacion3"
                android:textSize="18dp"
                android:transitionName="@string/presentacion3" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="264dp"
        android:layout_marginTop="35dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="159dp"
            android:layout_height="210dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:src="@drawable/abuelo" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="159dp"
            android:layout_height="197dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:src="@drawable/abuela" />

        <Button
            android:id="@+id/button"
            android:layout_width="150dp"
            android:layout_height="82dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/flechaa"
            android:visibility="visible" />

    </LinearLayout>

</android.widget.LinearLayout>
